<resources>
    <string name="app_name">Order Tracker</string>

    <string name="btn_si">SI</string>
    <string name="btn_no">NO</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_descartarlo">Descartarlo</string>
    <string name="btn_confirmarlo">Confirmarlo</string>
    <string name="btn_ir_cliente">Ir al Cliente</string>
    <string name="btn_enviarComentario">Enviar</string>
    <string name="btn_cancelarComentario">Cancelar</string>
    <string name="btn_agregar_pedido">Agregar Pedido</string>
    <string name="btn_leer_qr">Leer QR</string>

    <string name="action_settings">Configuracion</string>
    <string name="action_filtro_marca">Filtro Marca</string>

    <string name="error_accediendo_bd">Error accediendo a la BD: %1$s</string>
    <string name="error_respuesta_servidor">Error al interpretar la respuesta del servidor: %1$s</string>
    <string name="error_procesando">Error inesperado al procesar: %1$s</string>
    <string name="error_pedido_pendiente">Existe un pedido pendiente del cliente %1$s. Antes de continuar tiene que CONFIRMARLO, DESCARTARLO?</string>
    <string name="error_visita_pendiente">Existe una visita pendiente del cliente %1$s. Debe terminar la visita.</string>
    <string name="error_agregar_sin_stock">No se cuenta con mas stock de este producto. Desea agregarlo de todas formas?</string>
    <string name="error_incorrect_login">Usuario o password incorrecto</string>



    <string name="no_hay_producto_pedido">No hay productos en el pedido</string>
    <string name="no_hay_clientes">No hay clientes</string>
    <string name="no_hay_productos">No hay productos</string>
    <string name="no_hay_pedidos">No hay pedidos</string>

    <string name="nav_clientes">Clientes</string>
    <string name="nav_catalogo">Catálogo</string>
    <string name="nav_pedidos">Pedidos</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_logout">Logout</string>

    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_catalogo">Catálogo</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="title_activity_pedido">Nuevo Pedido</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="title_activity_confirma">Confirma</string>
    <string name="title_cliente_list">Clientes</string>
    <string name="title_cliente_detail">Cliente Detalle</string>
    <string name="title_activity_producto_detail">Detalle Producto</string>
    <string name="title_popup_ingrese_cantidad">Ingrese la Cantidad</string>
    <string name="title_popup_pedido_pendiente">Pedido Pendiente</string>
    <string name="title_popup_visita_pendiente">Visita Pendiente</string>
    <string name="title_popup_agregar_sin_stock">Items sin Stock</string>
    <string name="title_popup_comentario">Agregar Comentario</string>
    <string name="title_popup_comentario_razon">Especificar razón</string>
    <string name="title_popup_comentario_texto">Introducir comentario</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="msg_procesando">Procesando</string>
    <string name="msg_popup_comentario">Elija un motivo del comentario, adicionalmente complete un texto</string>
    <string name="msg_sesion_vencida">Su sesion ha vencido, debe loguearse nuevamente.</string>

    <string name="imagen_descripcion">Imagen</string>

    <string name="detalle_producto_categoria">Categoria</string>
    <string name="detalle_producto_nombre">Nombre del Producto</string>
    <string name="detalle_producto_marca">Marca</string>
    <string name="detalle_producto_precio">$0,00</string>
    <string name="detalle_producto_descripcion_titulo">Descripción</string>
    <string name="detalle_producto_descuento_titulo">Descuentos</string>
    <string name="detalle_producto_descripcion">Características del producto</string>
    <string name="detalle_producto_codigo_titulo">Código del Producto</string>
    <string name="detalle_producto_codigo">00000001</string>
    <string name="detalle_producto_estado_titulo">Estado</string>
    <string name="detalle_producto_estado">No disponible</string>
    <string name="detalle_producto_stock_titulo">Disponibles</string>
    <string name="detalle_producto_stock">0</string>
    <string name="detalle_producto_pedido_agregar">Agregar</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_no_logued_in">No esta logueado a la aplicacion</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>

