<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_contacts_24dp"
            android:title="@string/nav_clientes" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/nav_agenda" />
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/nav_catalogo" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_pedidos" />

        <!--
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_add_shopping_cart_24dp"
            android:title="@string/nav_catalogo" />
            -->
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/nav_logout" />
    </group>


</menu>
