<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.ProductoDetailActivity"
    tools:showIn="@layout/activity_producto_detail">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detalle_producto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetalleTitulo"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/detalle_producto_nombre"/>

            <!--
            <TextView
                android:id="@+id/detalle_producto_marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                style="@style/DetalleMarca"
                android:text="@string/detalle_producto_marca"/>
            -->

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detalle_producto_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetallePrecio"
                android:layout_marginBottom="5dp"
                android:text="@string/detalle_producto_precio"/>

            <ImageView
                android:id="@+id/detalle_producto_imagen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:minHeight="240dp"
                android:visibility="gone"
                android:contentDescription="@string/imagen_descripcion"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/detalle_producto_descripcion_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetalleDescripcionTitulo"
                    android:text="@string/detalle_producto_descripcion_titulo"/>

                <TextView
                    android:id="@+id/detalle_producto_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DetalleDescripcion"
                    android:text="@string/detalle_producto_descripcion"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detalle_producto_descuento"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detalle_producto_descuento_ico"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/descuento"/>

                <TextView
                    android:id="@+id/detalle_producto_descuento_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="@style/DetalleDescripcionTitulo"
                    android:text="@string/detalle_producto_descuento_titulo"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detalle_producto_descuento_tabla"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp">

                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col0"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col0_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold|italic"
                        android:text="Rango"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col0_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:textStyle="bold|italic"
                        android:text="Descuento"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col1_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="1-2"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col1_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="10%"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col2"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col2_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="1-2"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col2_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="10%"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col3"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col3_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="1-2"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col3_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="10%"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col4"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col4_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="1-2"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col4_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="10%"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detalle_producto_descuento_col5"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col5_row1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="1-2"/>

                    <TextView
                        android:id="@+id/detalle_producto_descuento_col5_row2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/cell_type_1"
                        android:text="10%"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp">

            <TextView
                android:id="@+id/detalle_producto_codigo_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                style="@style/DetalleCodigo"
                android:text="@string/detalle_producto_codigo_titulo"/>

            <TextView
                android:id="@+id/detalle_producto_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                style="@style/DetalleCodigo"
                android:text="@string/detalle_producto_codigo"/>

        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detalle_producto_estado_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                style="@style/DetalleStock"
                android:text="@string/detalle_producto_estado_titulo"/>

            <TextView
                android:id="@+id/detalle_producto_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetalleStock"
                android:text="@string/detalle_producto_estado"/>

        </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detalle_producto_stock_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="5dp"
                style="@style/DetalleStock"
                android:text="@string/detalle_producto_stock_titulo"/>

            <TextView
                android:id="@+id/detalle_producto_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetalleStock"
                android:layout_marginBottom="5dp"
                android:text="@string/detalle_producto_stock"/>

        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/detalle_producto_pedido_menos"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"/>

            <EditText
                android:id="@+id/detalle_producto_pedido_campo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/detalle_producto_pedido_mas"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalle_producto_pedido_agregar"
                android:id="@+id/detalle_producto_pedido_agregar"/>

        </LinearLayout>
        -->
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>